// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Divider Dashed 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <hr
      class="sc-ikZpkk gsqVGX sc-himrzO bFeaYz"
      type="dashed"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Divider Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <hr
      class="sc-ikZpkk gktiUR sc-himrzO bFeaYz"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Divider With Custom Color 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <hr
      class="sc-ikZpkk zmDuI sc-himrzO fnmhr"
      color="#ccc"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Divider With Text Content 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds gNjzDq sc-hHLeRK qjMas sc-himrzO bFeaYz"
    >
      <hr
        class="sc-ikZpkk sc-jIZahH gsqVGX ckJNCF"
        type="dashed"
      />
      <span
        class="sc-fLlhyt gAlhfr sc-ivTmOn loZvwN"
      >
        some text
      </span>
      <hr
        class="sc-ikZpkk sc-jIZahH gsqVGX ckJNCF"
        type="dashed"
      />
    </div>
  </div>
</div>
`;
